--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     androidTestCompile 'com.android.support:support-annotations:26.1.0'
     implementation 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    implementation 'com.android.support:design:25.3.1'
     implementation 'me.relex:circleindicator:1.2.2@aar'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
