--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.Splash"  android:windowSoftInputMode="stateHidden|adjustResize">
+        <activity
+            android:name=".View.Splash"
+            android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".View.MainActivity" android:windowSoftInputMode="stateHidden|adjustResize">
+        <activity
+            android:name=".View.MainActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
 
-        </activity>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <activity android:name=".View.HomePage"></activity>
     </application>
 
 </manifest>
