--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.android.support:design:25.3.1'
     implementation 'me.relex:circleindicator:1.2.2@aar'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.specyci:residemenu:1.6+'
 
 }
 configurations.all {
