--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,9 @@ dependencies {
     implementation 'me.relex:circleindicator:1.2.2@aar'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.specyci:residemenu:1.6+'
-
+    implementation 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    implementation 'com.google.code.gson:gson:2.6.1'
 
 
 }
