--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
             android:resource="@array/preloaded_fonts" />
 
         <activity android:name=".View.HomePage" />
-        <activity android:name=".View.Product_Activity"></activity>
+        <activity android:name=".View.Product_Activity" />
+        <activity android:name=".View.ShowProduct"></activity>
     </application>
 
 </manifest>
