--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.6.1'
     implementation 'com.google.android.gms:play-services-maps:16.+'
     implementation 'com.google.android.gms:play-services-places:16.0.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
 
 }
 configurations.all {
