--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.6.1'
     implementation 'com.google.android.gms:play-services-maps:16.+'
     implementation 'com.google.android.gms:play-services-places:16.0.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+    implementation 'us.belka:androidtoggleswitch:1.2.2'
 
 }
 configurations.all {
