--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.alaa.microprocess.lrahtk"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "4.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -25,7 +25,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.firebase:firebase-messaging:11.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -41,8 +41,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     implementation 'com.google.code.gson:gson:2.6.1'
-    implementation 'com.google.android.gms:play-services-maps:16.+'
-    implementation 'com.google.android.gms:play-services-places:16.0.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.3.1'
 
 }
@@ -51,3 +49,5 @@ configurations.all {
     resolutionStrategy.force 'com.android.support:support-annotations:26.1.0'
 
 }
+
+apply plugin: 'com.google.gms.google-services'
