add new Features in Gifts .

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
+
         </service>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -69,7 +70,9 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+        <meta-data android:name="com.google.firebase.messaging.default_notification_icon"
 
+            android:resource="@mipmap/ic_launcher" />
 
     </application>
 
