--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,20 @@
 
             android:resource="@mipmap/ic_launcher" />
 
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.alaa.microprocess.lrahtk.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+
+            <!-- ressource file to create -->
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths">
+            </meta-data>
+
+        </provider>
+
     </application>
 
 </manifest>
